2001-12-26  Alexander V. Lukyanov <lav@yars.free.net>

	* ArgV.h: new ctor.
	* CatJob.cc, CatJob.h: use ArgV to launch filters; always launch
	  global command if there is for_each filter.
	* Filter.cc, Filter.h: DeleteSecondaryStream new method; improve
	  OutputFilter::{usesfd,Done,Kill}.

2001-12-26  Glenn Maynard <g_ld@zewt.org>

	* ftpclass.cc: correct message.

2001-12-25  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc: assume keep-alive for http/1.1 by default (reported by
	  Marc Lehmann).

2001-12-24  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: reset real_cwd when someone does quote CWD and the like;
	  scan PWD reply for rightmost quote (suggested by Glenn Maynard);
	  separate method SendCWD.

2001-12-24  Glenn Maynard <g_ld@zewt.org>

	* StatusLine.h: make GetWidthDelayed const.

2001-12-24  Alexander V. Lukyanov <lav@yars.free.net>

	* LsCache.cc: ignore SetDirectory with NULL argument.

2001-12-21  Alexander V. Lukyanov <lav@yars.free.net>

	* mkdirJob.cc, mkdirJob.h: use orig_session approach instead of
	  url_session.
	* FindJob.cc, FindJob.h: Fg/Bg methods.

2001-12-20  Alexander V. Lukyanov <lav@yars.free.net>

	* ArgV.cc, ArgV.h: (seek) new method.
	* MirrorJob.cc: seek args before TreatJob creation.
	* ftpclass.cc, ftpclass.h, NetAccess.cc, NetAccess.h, Http.cc, Http.h,
	  Fish.cc, Fish.h: get rid of takeover_time; use last_priority and
	  idle_start (idea of Glenn Maynard).
	* ftpclass.cc: call PopResp before actual checking, so that Disconnect
	  can see empty RespQueue.
	* QueueFeeder.cc: don't print dots where there is only 5 jobs queued.
	* HttpDir.cc: more strict checking for squid ftp listings; handle TR
	  similarly to /TR.

2001-12-20  Glenn Maynard <g_ld@zewt.org>

	* FileAccess.cc, FileAccess.h: add last_priority member.
	* ftpclass.cc, ftpclass.h: tune log levels.

2001-12-19  Alexander V. Lukyanov <lav@yars.free.net>

	* QueueFeeder.cc: pass correct job count to plural().
